<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="title"
            type="String" />
    </data>

<androidx.appcompat.widget.LinearLayoutCompat
    android:id="@+id/switchLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutReception"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/messageText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/dimen5"
            android:text="@string/reception_all"
            android:textAppearance="@style/readex_14_regular"
            android:textColor="@color/blue"
            app:layout_constraintBottom_toBottomOf="@+id/receptionSwitch"
            app:layout_constraintEnd_toStartOf="@+id/receptionSwitch"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/receptionSwitch" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/receptionSwitch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checked="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutResponse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/responseText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/dimen5"
            android:text="@string/not_allow_response"
            android:textAppearance="@style/readex_14_regular"
            android:textColor="@color/blue"
            app:layout_constraintBottom_toBottomOf="@+id/responseSwitch"
            app:layout_constraintEnd_toStartOf="@+id/responseSwitch"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/responseSwitch" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/responseSwitch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checked="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/showLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/showText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/dimen5"
            android:text="@string/see_all_messages"
            android:textAppearance="@style/readex_14_regular"
            android:textColor="@color/blue"
            app:layout_constraintBottom_toBottomOf="@+id/showSwitch"
            app:layout_constraintEnd_toStartOf="@+id/showSwitch"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/showSwitch" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/showSwitch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checked="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sendLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/sendText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/dimen5"
            android:text="@string/send_now_message"
            android:textAppearance="@style/readex_14_regular"
            android:textColor="@color/blue"
            app:layout_constraintBottom_toBottomOf="@+id/sendSwitch"
            app:layout_constraintEnd_toStartOf="@+id/sendSwitch"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/sendSwitch" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/sendSwitch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checked="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.appcompat.widget.LinearLayoutCompat>
</layout>