<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.features.validateCert.ValidateCertActivity">

    <data>

        <variable
            name="validateCertViewModel"
            type="com.ulearning.ulearning_app.presentation.features.validateCert.ValidateCertViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/topBarInclude"
            layout="@layout/top_bar_simple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@{@string/title_download_cert}" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topBarInclude">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.94" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.06" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="@dimen/dimen120"
                    android:layout_height="@dimen/dimen120"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="1:0.6"
                    app:layout_constraintEnd_toStartOf="@+id/guideline3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/logo"
                    tools:ignore="ContentDescription" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/numberCertTl"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen26"
                    android:hint="@string/number_certificate"
                    app:layout_constraintEnd_toStartOf="@+id/guideline3"
                    app:layout_constraintStart_toStartOf="@+id/guideline5"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2"
                    app:layout_constraintVertical_bias="1.0">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:text="@={validateCertViewModel.numberCert}" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/codeTl"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen8"
                    android:hint="@string/code_cert"
                    app:layout_constraintEnd_toStartOf="@+id/guideline3"
                    app:layout_constraintStart_toStartOf="@+id/guideline5"
                    app:layout_constraintTop_toBottomOf="@+id/numberCertTl"
                    app:layout_constraintVertical_bias="1.0">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:text="@={validateCertViewModel.codeCert}" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/validateCertBtn"
                    style="@style/Widget.Material3.Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen16"
                    android:layout_marginBottom="@dimen/dimen40"
                    android:onClick="@{()->validateCertViewModel.setEvent(validateCertViewModel.Events.verifyCodeCert)}"
                    android:text="@string/validate"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/guideline3"
                    app:layout_constraintStart_toStartOf="@+id/guideline5"
                    app:layout_constraintTop_toBottomOf="@+id/codeTl"
                    app:layout_constraintVertical_bias="0.0"
                    tools:ignore="HardcodedText" />


                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardInfo"
                    style="?attr/materialCardViewElevatedStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen16"
                    android:elevation="@dimen/dimen1"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/guideline3"
                    app:layout_constraintStart_toStartOf="@+id/guideline5"
                    app:layout_constraintTop_toBottomOf="@+id/validateCertBtn"
                    app:layout_constraintVertical_bias="0.49"
                    tools:visibility="visible">


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dimen16"
                        tools:layout_editor_absoluteX="0dp"
                        tools:layout_editor_absoluteY="0dp">

                        <TextView
                            android:id="@+id/title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/readex_bold"
                            android:text="¡Felicidades!"
                            android:textColor="@color/blue"
                            android:textSize="@dimen/dimen20"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />


                        <TextView
                            android:id="@+id/subTitleTv"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dimen8"
                            android:fontFamily="@font/readex_regular"
                            android:text="@string/subTile_card_course"
                            android:textColor="@color/blue"
                            android:textSize="@dimen/dimen14"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/title" />


                        <TextView
                            android:id="@+id/numberCertTv"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"

                            android:layout_marginTop="@dimen/dimen8"
                            android:drawableStart="@drawable/ic_baseline_brightness"
                            android:drawablePadding="@dimen/dimen5"
                            android:fontFamily="@font/readex_regular"
                            android:gravity="left"
                            android:text="@string/item_number_cert"
                            android:textColor="@color/blue"
                            android:textSize="@dimen/dimen14"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/subTitleTv" />

                        <TextView
                            android:id="@+id/nameTv"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"

                            android:layout_marginTop="@dimen/dimen2"
                            android:drawableStart="@drawable/ic_baseline_brightness"
                            android:drawablePadding="@dimen/dimen5"
                            android:fontFamily="@font/readex_regular"
                            android:gravity="left"
                            android:text="@string/item_name"
                            android:textColor="@color/blue"
                            android:textSize="@dimen/dimen14"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/numberCertTv" />

                        <TextView
                            android:id="@+id/scoreTv"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"

                            android:layout_marginTop="@dimen/dimen2"
                            android:drawableStart="@drawable/ic_baseline_brightness"
                            android:drawablePadding="@dimen/dimen5"
                            android:fontFamily="@font/readex_regular"
                            android:gravity="left"
                            android:text="@string/item_score"
                            android:textColor="@color/blue"
                            android:textSize="@dimen/dimen14"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/nameTv" />

                        <TextView
                            android:id="@+id/hourTv"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"

                            android:layout_marginTop="@dimen/dimen2"
                            android:drawableStart="@drawable/ic_baseline_brightness"
                            android:drawablePadding="@dimen/dimen5"
                            android:fontFamily="@font/readex_regular"
                            android:gravity="left"
                            android:text="@string/item_hour"
                            android:textColor="@color/blue"
                            android:textSize="@dimen/dimen14"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/scoreTv" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>